Implement backend middleware (#4)
Adds the translation layer between service and persistence layers. Currently, this is a very simple layer and only handles happy path. Since this is a simple project, no tests have been added yet, tests will be handled in a future PR.
