# backend/api/oapi-codegen.gen.go
@@ -69,9 +69,6 @@ type ErrorResponseErrorCode string
 
 // Game A game in the library
 type Game struct {
-	// CreatedAt ISO 8601 timestamp when the game was added to library in UTC
-	CreatedAt time.Time `json:"createdAt"`
-
 	// GameId Game ID
 	GameId openapi_types.UUID `json:"gameId"`
 
@@ -109,14 +106,11 @@ type LibraryTransaction struct {
 	PatronId openapi_types.UUID `json:"patronId"`
 
 	// Timestamp ISO 8601 timestamp when the transaction occurred in UTC
-	Timestamp *time.Time `json:"timestamp,omitempty"`
+	Timestamp time.Time `json:"timestamp"`
 }
 
 // Patron A library patron
 type Patron struct {
-	// CreatedAt ISO 8601 timestamp when the patron was added to library in UTC
-	CreatedAt time.Time `json:"createdAt"`
-
 	// Name The name of the patron
 	Name string `json:"name"`
 
